.provarCaches/00D5f000005vwGkEAI/objects/rstk__convertreq_ui__c.object
<CustomObject>
    <description>convertreq_ui__c</description>
    <fields>
        <fullName>rstk__convertreq_cvt_to_existing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Convert to Existing PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_dckdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_poqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Quantity</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_purord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Convert Req to POs</relationshipLabel>
        <relationshipName>Convert_Req_to_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_qtytoconvert__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Req Qty to Convert</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_reqcvrtdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Req Convert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_unitprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__convertreq_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Convert Req to POs</relationshipLabel>
        <relationshipName>Convert_Req_to_POs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Convert Req to PO</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Convert Req to PO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Convert Req to POs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>